--- a/wp-content/plugins/ghes-vlp/views/admin/templates/lesson-editor.html
+++ b/wp-content/plugins/ghes-vlp/views/admin/templates/lesson-editor.html
@@ -1,9 +1,24 @@
-<script id="lesson-editor" type="text/x-kendo-template">
-<h3>Edit Lesson</h3>
-<p>
-    <label>Title:<input name="Title" /></label>
-</p>
-<p>
-    <label>Type: <input name="Type" /></label>
-</p>
-</script>
+<div class="edit-lesson-popup">
+    <div class="lessonInformation">
+        <label>Lesson Theme: <input id="LessonTheme" data-bind="value:Theme_id" name="Theme_id"></label>
+        <label>Lesson Age Group: <input id="LessonAgeGroup" data-bind="value:AgeGroup_id" name="AgeGroup_id"></label>
+    </div>
+    <div class="edit-lesson">
+        <div class="first-column">
+            <label>Lesson Type: <input id="LessonType" name="Type" /></label>
+            <label>Lesson Title: <input id="LessonTitle" name="Title" /></label>
+            <label>Lesson Main Content:<br /><textarea id="LessonMainContent" name="MainContent"
+                    style="width:100%;height:100px;"></textarea></label>
+        </div>
+        <div class="second-column">
+            <label>Lesson Video: <input id="LessonVideo" name="VideoURL" /></label>
+            <div class="related-materials">
+                <span>Related Materials</span>
+                <div id="LessonRelatedMaterials"></div>
+            </div>
+            <input id="resourceTitle" />
+            <input id="resourceMediaId" />
+            <span class="k-button k-button-icontext k-add-button" onClick="AddNewResource()"><span class="k-icon k-i-add"></span>Add new record</span>
+        </div>
+    </div>
+</div>
