--- a/wp-content/plugins/ghes-vlp/views/admin/templates/related-items-editor.html
+++ b/wp-content/plugins/ghes-vlp/views/admin/templates/related-items-editor.html
@@ -1,7 +1,8 @@
 <div class="related-item">
-    <span>#:Title#</span>
-    <span>#:Media_id#</span>
+    <div class="resource-details">
+        <a href="#:MediaURL#" target="_blank">#:Title#</a>
+    </div>
     <div class="edit-buttons">
-        <span onClick="DeleteResource(this)">Delete</span>
+        <span onClick="DeleteResource(this)" class="k-icon k-i-delete">Delete</span>
     </div>
 </div>
