editinf lesson is now working,

--- a/wp-content/plugins/ghes-vlp/views/templates/browse-theme.html
+++ b/wp-content/plugins/ghes-vlp/views/templates/browse-theme.html
@@ -5,7 +5,7 @@
 
 <script type="text/x-kendo-template" id="template">
     <div class="theme">
-        <div><span class="theme-title">#:Title#</span></div>
+        <div class="theme-title">#:Title#</div>
         <a class="themeaccess" href="/gameboard">Access Content</a>
     </div>
 </script>
