--- a/wp-content/plugins/ghes-vlp/css/browse-themes.css
+++ b/wp-content/plugins/ghes-vlp/css/browse-themes.css
@@ -1,3 +1,14 @@
+.browse-themes-header {
+    background-color: #1fa99d;
+    color: white;
+    padding: 5px 20px 5px 20px;
+    font-size: 1.3em;
+    margin-bottom: 15px;
+    text-transform: uppercase;
+}
+.browse-themes-age {
+    font-weight: 700;
+}
 #themes-listView {
     min-height: 200px;
 }
@@ -12,12 +23,15 @@
 }
 .theme-title {
     color: white;
-    padding: 10px;
+    padding: 10px 10px 20px 10px;
+    font-weight: 700;
 }
 .themeaccess {
     color: white;
     background-color: #f69e33;
-    padding: 5px;
+    padding: 5px 30px 5px 30px;
+    font-size: 80%;
+    font-weight: 700;
 }
 
 .theme {
