--- a/wp-content/plugins/ghes-vlp/views/admin/templates/related-items-editor.html
+++ b/wp-content/plugins/ghes-vlp/views/admin/templates/related-items-editor.html
@@ -1,6 +1,6 @@
 <div class="related-item">
     <div class="resource-details">
-        <a href="#:MediaURL#" target="_blank">#:Title#</a>
+        <a href="#:ResourceLink#" target="_blank">#:Title#</a>
     </div>
     <div class="edit-buttons">
         <span onClick="DeleteResource(this)" class="k-icon k-i-delete">Delete</span>
