--- a/wp-content/plugins/ghes-vlp/views/admin/templates/lesson-editor.html
+++ b/wp-content/plugins/ghes-vlp/views/admin/templates/lesson-editor.html
@@ -19,16 +19,18 @@
                 <div id="LessonRelatedMaterials"></div>
             </div>
             <div class="resources">
-                <br/>
+                <br />
                 <label>Add Related Materials:</label>
-                <input id="newResourceTitle" placeholder="Item Title..." onblur="ResourceRequired()" onkeypress="ResourceRequired()"/>
-                <input hidden id="newResourceLink" placeholder="https://example.com/" onblur="ResourceRequired()" onkeypress="ResourceRequired()"/>
+                <input id="newResourceTitle" placeholder="Item Title..." onblur="ResourceRequired()"
+                    onkeypress="ResourceRequired()" />
+                <input hidden id="newResourceLink" placeholder="https://example.com/" onblur="ResourceRequired()"
+                    onkeypress="ResourceRequired()" />
                 <a hidden id="newResourceURL" src="" target="_blank">NewResourceTitle</a>
                 <input hidden id="newResourceId" onchange="ResourceRequired()" />
-                <span class="k-button" id="newResourceMediaButton" >Add Media</span>
+                <span class="k-button" id="newResourceMediaButton">Add Media</span>
                 <span class="k-button" id="newResourceLinkButton" onClick="AddNewResourceLink()">Add Link</span>
-                <span class="k-button k-button-icontext k-add-button k-state-disabled" id="addResource" onClick="AddNewResource()"><span
-                        class="k-icon k-i-add"></span>Add</span>
+                <span class="k-button k-button-icontext k-add-button k-state-disabled" id="addResource"
+                    onClick="AddNewResource()"><span class="k-icon k-i-add"></span>Add</span>
             </div>
         </div>
     </div>
