--- a/wp-content/plugins/ghes-vlp/views/admin/templates/lesson-editor.html
+++ b/wp-content/plugins/ghes-vlp/views/admin/templates/lesson-editor.html
@@ -1,14 +1,14 @@
 <div class="edit-lesson-popup">
     <div class="lessonInformation">
-        <label>Lesson Theme: <input id="LessonTheme" data-bind="value:Theme_id" name="Theme_id"></label>
+        <label>Lesson Theme: <input id="LessonTheme" data-bind="value:Theme_id" name="Theme_id" required ></label>
     </div>
     <hr>
     <div class="edit-lesson">
         <div class="first-column">
-            <label>Lesson Type: <input id="LessonType" name="Type" /></label>
-            <label>Lesson Title: <input id="LessonTitle" name="Title" /></label>
+            <label>Lesson Type: <input id="LessonType" name="Type" required /></label>
+            <label>Lesson Title: <input id="LessonTitle" name="Title" required /></label>
             <label>Lesson Main Content:<br /><textarea id="LessonMainContent" name="MainContent"
-                    style="width:100%;height:100px;"></textarea></label>
+                    style="width:100%;height:100px;" required ></textarea></label>
         </div>
         <div class="second-column">
             <label>Lesson Video: <input id="LessonVideo" name="VideoURL" onblur="UpdateVideo(this)" /></label>
@@ -16,6 +16,7 @@
             <hr>
             <div class="related-materials">
                 <label>Related Materials:</label>
+                <div class="lesson-not-saved"><h3>You must save the lesson before you can add resources.</h3></div>
                 <div id="LessonRelatedMaterials"></div>
             </div>
             <div class="resources">
