--- a/wp-content/plugins/ghes-vlp/css/browse-themes.css
+++ b/wp-content/plugins/ghes-vlp/css/browse-themes.css
@@ -24,8 +24,12 @@
 }
 .theme-title {
     color: white;
-    padding: 10px 10px 20px 10px;
+    padding: 10px 10px 0px 10px;
     font-weight: 700;
+}
+.theme-date {
+    font-size: .8em;
+    padding-bottom: 20px;
 }
 .themeaccess {
     color: white;
@@ -47,4 +51,24 @@
 
 .theme:nth-child(3n) {
     background-color: #1a71ad;
+}
+.child-name {
+    float: right;
+}
+
+.theme-completion-icon img {
+    display: none;
+    background-color: transparent;
+    border: none;
+    border-radius: none;
+    box-shadow: none;
+    width: 15px;
+    box-shadow: none !important;
+    position: relative;
+    top: -10px;
+    left: -5px;
+}
+
+.Completed-1 .theme-completion-icon img {
+    display: inline;
 }
