--- a/wp-content/plugins/ghes-vlp/css/gameboard-global.css
+++ b/wp-content/plugins/ghes-vlp/css/gameboard-global.css
@@ -42,7 +42,7 @@
 
 .gameboard-theme-header {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 1fr 1fr 1fr;
     margin-bottom: 20px;
 }
 
