new creative and mobile view

--- a/wp-content/plugins/ghes-vlp/css/gameboard-1.css
+++ b/wp-content/plugins/ghes-vlp/css/gameboard-1.css
@@ -8,64 +8,32 @@
         bottom: 74px;
     }
     .L-2-position {
-        left: 358px;
-        bottom: 136px;
-    }
-    .L-3-position {
         left: 400px;
         bottom: 250px;
     }
-    .L-4-position {
-        left: 216px;
-        bottom: 188px;
-    }
-    .L-5-position {
+    .L-3-position {
         left: 369px;
         bottom: 58px;
     }
-    .L-6-position {
-        left: 497px;
-        bottom: 82px;
-    }
-    .L-7-position {
+    .L-4-position {
         left: 604px;
         bottom: 50px;
     }
-    .L-8-position {
-        left: 672px;
-        bottom: 111px;
-    }
-    .L-9-position {
+    .L-5-position {
         left: 752px;
         bottom: 209px;
     }
-    .L-10-position {
-        left: 627px;
-        bottom: 288px;
-    }
-    .L-11-position {
+    .L-6-position {
         left: 504px;
         bottom: 228px;
     }
-    .L-12-position {
-        left: 698px;
-        bottom: 315px;
-    }
-    .L-13-position {
+    .L-7-position {
         left: 502px;
         bottom: 307px;
     }
-    .L-14-position {
-        left: 398px;
-        bottom: 373px;
-    }
-    .L-15-position {
+    .L-8-position {
         left: 524px;
         bottom: 443px;
-    }
-    .L-16-position {
-        left: 607px;
-        bottom: 413px;
     }
 }
 
@@ -77,69 +45,34 @@
         bottom: 94px;
     }
     .L-2-position {
-        left: 294px;
-        bottom: 153px;
-    }
-    .L-3-position {
         left: 273px;
         bottom: 251px;
     }
-    .L-4-position {
-        left: 188px;
-        bottom: 160px;
-    }
-    .L-5-position {
+    .L-3-position {
         left: 293px;
         bottom: 93px;
     }
-    .L-6-position {
-        left: 416px;
-        bottom: 102px;
-    }
-    .L-7-position {
+    .L-4-position {
         left: 503px;
         bottom: 103px;
     }
-    .L-8-position {
-        left: 569px;
-        bottom: 140px;
-    }
-    .L-9-position {
+    .L-5-position {
         left: 627px;
         bottom: 216px;
     }
-    .L-10-position {
-        left: 524px;
-        bottom: 283px;
-        ;
-    }
-    .L-11-position {
+    .L-6-position {
         left: 419px;
         bottom: 239px;
         ;
     }
-    .L-12-position {
-        left: 579px;
-        bottom: 315px;
-        ;
-    }
-    .L-13-position {
+    .L-7-position {
         left: 455px;
         bottom: 307px;
         ;
     }
-    .L-14-position {
-        left: 323px;
-        bottom: 367px;
-        ;
-    }
-    .L-15-position {
+    .L-8-position {
         left: 447px;
         bottom: 405px;
-    }
-    .L-16-position {
-        left: 566px;
-        bottom: 368px;
     }
 }
 
@@ -151,68 +84,32 @@
         bottom: 88px;
     }
     .L-2-position {
-        left: 221px;
-        bottom: 127px;
-        ;
-    }
-    .L-3-position {
         left: 241px;
         bottom: 198px;
-        ;
     }
-    .L-4-position {
-        left: 130px;
-        bottom: 158px;
-    }
-    .L-5-position {
+    .L-3-position {
         left: 221px;
         bottom: 82px;
-        ;
     }
-    .L-6-position {
-        left: 319px;
-        bottom: 88px;
-        ;
-    }
-    .L-7-position {
+    .L-4-position {
         left: 388px;
         bottom: 87px;
     }
-    .L-8-position {
-        left: 446px;
-        bottom: 114px;
-    }
-    .L-9-position {
+    .L-5-position {
         left: 478px;
         bottom: 177px;
     }
-    .L-10-position {
-        left: 403px;
-        bottom: 230px;
-    }
-    .L-11-position {
+    .L-6-position {
         left: 326px;
         bottom: 191px;
     }
-    .L-12-position {
-        left: 450px;
-        bottom: 249px;
-    }
-    .L-13-position {
+    .L-7-position {
         left: 316px;
         bottom: 242px;
     }
-    .L-14-position {
-        left: 252px;
-        bottom: 289px;
-    }
-    .L-15-position {
+    .L-8-position {
         left: 337px;
         bottom: 321px;
-    }
-    .L-16-position {
-        left: 395px;
-        bottom: 311px;
     }
 }
 
@@ -225,64 +122,32 @@
         bottom: 63px;
     }
     .L-2-position {
-        left: 175px;
-        bottom: 97px;
-    }
-    .L-3-position {
         left: 201px;
         bottom: 162px;
     }
-    .L-4-position {
-        left: 107px;
-        bottom: 123px;
-    }
-    .L-5-position {
+    .L-3-position {
         left: 177px;
         bottom: 60px;
     }
-    .L-6-position {
-        left: 254px;
-        bottom: 64px;
-    }
-    .L-7-position {
+    .L-4-position {
         left: 305px;
         bottom: 63px;
     }
-    .L-8-position {
-        left: 346px;
-        bottom: 82px;
-    }
-    .L-9-position {
+    .L-5-position {
         left: 384px;
         bottom: 133px;
     }
-    .L-10-position {
-        left: 324px;
-        bottom: 177px;
-    }
-    .L-11-position {
+    .L-6-position {
         left: 257px;
         bottom: 143px;
     }
-    .L-12-position {
-        left: 354px;
-        bottom: 194px;
-    }
-    .L-13-position {
+    .L-7-position {
         left: 251px;
         bottom: 186px;
     }
-    .L-14-position {
-        left: 202px;
-        bottom: 225px;
-    }
-    .L-15-position {
+    .L-8-position {
         left: 263px;
         bottom: 257px;
-    }
-    .L-16-position {
-        left: 315px;
-        bottom: 237px;
     }
 }
 
@@ -294,67 +159,68 @@
         bottom: 49px;
     }
     .L-2-position {
-        left: 144px;
-        bottom: 82px;
-    }
-    .L-3-position {
         left: 168px;
         bottom: 131px;
     }
-    .L-4-position {
-        left: 86px;
-        bottom: 103px;
-    }
-    .L-5-position {
+    .L-3-position {
         left: 148px;
         bottom: 51px;
     }
-    .L-6-position {
-        left: 210px;
-        bottom: 57px;
-    }
-    .L-7-position {
+    .L-4-position {
         left: 256px;
         bottom: 45px;
     }
-    .L-8-position {
-        left: 287px;
-        bottom: 73px;
-    }
-    .L-9-position {
+    .L-5-position {
         left: 317px;
         bottom: 113px;
     }
-    .L-10-position {
-        left: 265px;
-        bottom: 149px;
-    }
-    .L-11-position {
+    .L-6-position {
         left: 213px;
         bottom: 125px;
     }
-    .L-12-position {
-        left: 298px;
-        bottom: 163px;
-    }
-    .L-13-position {
+    .L-7-position {
         left: 213px;
         bottom: 159px;
     }
-    .L-14-position {
-        left: 166px;
-        bottom: 190px;
-    }
-    .L-15-position {
+    .L-8-position {
         left: 225px;
         bottom: 216px;
     }
-    .L-16-position {
-        left: 271px;
-        bottom: 199px;
-    }
 }
 
-/* Screen Size Max 499px min 425px */
+/* Screen Size Max 499px and below */
 
-/* @media screen and (max-width: 499px) and (min-width: 425px) {} */
+@media screen and (max-width: 499px) {
+    .L-1-position {
+        grid-column-start: 4;
+        grid-row-start: 2;
+    }
+    .L-2-position {
+        grid-column-start: 2;
+        grid-row-start: 3;
+    }
+    .L-3-position {
+        grid-column-start: 4;
+        grid-row-start: 4;
+    }
+    .L-4-position {
+        grid-column-start: 2;
+        grid-row-start: 5;
+    }
+    .L-5-position {
+        grid-column-start: 4;
+        grid-row-start: 6;
+    }
+    .L-6-position {
+        grid-column-start: 2;
+        grid-row-start: 7;
+    }
+    .L-7-position {
+        grid-column-start: 4;
+        grid-row-start: 8;
+    }
+    .L-8-position {
+        grid-column-start: 2;
+        grid-row-start: 9;
+    }
+}
