--- a/wp-content/plugins/ghes-vlp/views/admin/templates/lesson-editor.html
+++ b/wp-content/plugins/ghes-vlp/views/admin/templates/lesson-editor.html
@@ -12,7 +12,7 @@
         </div>
         <div class="second-column">
             <label>Lesson Video: <input id="LessonVideo" name="VideoURL" onblur="UpdateVideo(this)" /></label>
-            <iframe id="LessonVideoiFrame" width="320" height="180" name="VideoURL" src="#= VideoURL #"></iframe>
+            <iframe id="LessonVideoiFrame" name="VideoURL" src="#= VideoURL #"></iframe>
             <hr>
             <div class="related-materials">
                 <label>Related Materials:</label>
